# Win64Qt6DesktopSoftwareTemplate

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
cmake/: copy_mingw_dlls_to_bin.cmake  copy_qt6_dlls_to_bin.cmake  import_qt6.cmake  sources.cmake
cmake/embed_qt_resources/: include_all.cmake
cmake/embed_qt_resources/themes/: include_all.cmake
cmake/embed_qt_resources/themes/Jaime Quiroga/: include_all.cmake
cmake/embed_qt_resources/themes/qmc2/: include_all.cmake
cmake/embed_qt_resources/themes/qmc2/themes/: black.cmake  diefer.cmake  fire.cmake  metal.cmake  (+2 more)
installer/: generator.py
resources/themes/Jaime Quiroga/: Aqua.qss
resources/themes/qmc2/: note.txt
resources/themes/qmc2/black-0.11/: theme.qss
resources/themes/qmc2/diefer-0.10/: theme.qss
resources/themes/qmc2/fire-0.9/: theme.qss
resources/themes/qmc2/metal-0.10/: theme.qss
resources/themes/qmc2/sandy-0.10/: theme.qss
resources/themes/qmc2/xmas-0.5/: theme.qss
src/: main.cpp
src/data_structures/: data_structures.cpp  data_structures.hpp
src/globals/: globals.hpp
src/globals/sources/: theme_registry.cpp
src/io/: io.cpp  io.hpp
src/logic/: logic.cpp  logic.hpp
src/macros/: macros.hpp
src/templates/: delegate.hpp  optional.hpp  trackable_value.hpp
src/ui/: ui.cpp  ui.hpp
src/utils/: exceptions.hpp  utils.hpp
src/utils/sources/: exceptions.cpp  utils.cpp
tests/: logic.increase_counter.cpp  logic.reset_counter.cpp  templates.delegate.cpp  templates.optional.cpp  templates.trackable_value.cpp  tests.cmake  utils.win32_strerror.cpp
tests/api/: api.cpp  api.hpp
